# plugin_core

./: Cargo.toml  README.md
plugin_api/: Cargo.toml
plugin_api/src/: error.rs  lib.rs
plugin_macro/: Cargo.toml
plugin_macro/src/: lib.rs
src/: lib.rs
